style(menu): fix z-index overlap modal

--- a/src/film-database/features/menu/_fdMenu.scss
+++ b/src/film-database/features/menu/_fdMenu.scss
@@ -3,21 +3,19 @@
 
 .fdMenu {
   position: fixed;
-  z-index: 2;
-  display: flex;
-  gap: 48px;
-  width: auto;
-  will-change: width;
+  z-index: 10;
+  display: grid;
+  grid-template-columns: max-content;
+  grid-template-rows: 1fr;
+  width: 100%;
   height: 100%;
-  padding: var(--fd-padding-generic) calc((var(--fd-padding-generic) / 3.5));
-  transition: width ease-in-out 0.36ms;
+  overflow: clip;
   &::before {
     content: '';
     position: fixed;
     top: 0;
     left: 0;
     height: 100svh;
-    will-change: width;
     background: linear-gradient(to right, rgba(0, 0, 0, 1) 15%, rgba(0, 0, 0, 0.7) 100%);
   }
   &[data-modal='closed'] {
@@ -42,13 +40,13 @@
 }
 
 .fdMenu__toolbar {
-  flex: 0 1 auto;
+  grid-area: 1 / 1 / 2 / 2;
   position: relative;
   z-index: 11;
   display: flex;
   align-items: center;
-  width: fit-content;
   height: 50%;
+  padding: var(--fd-padding-generic) 0 var(--fd-padding-generic) calc((var(--fd-padding-generic) / 3.5));
   &__ul {
     display: flex;
     flex-direction: column;
@@ -77,67 +75,41 @@
 }
 
 .fdMenu__menu {
-  flex: 1 0 auto;
-  position: relative;
-  z-index: 11;
-  display: flex;
-  align-items: center;
-  width: min-content;
-  gap: 48px;
-  scrollbar-width: none;
+  grid-area: 1 / 2 / 2 / 3;
   & > * {
-    height: inherit;
-  }
-  &__search {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  &__genres {
-    &__nav {
-      &--heading {
-        @include m.fdFontL;
-      }
-      &__ul {
-        overflow-y: scroll;
-        scrollbar-width: none;
-        &__li {
-          &--button {
-            @include m.fdFontL;
-            white-space: nowrap;
-          }
-        }
-      }
-    }
-  }
-  &__search,
-  &__genres {
-    transition: opacity 0.35ms ease-in-out;
+    position: relative;
+    z-index: 11;
+    height: 100%;
+    padding: var(--fd-padding-generic) calc((var(--fd-padding-generic) / 3.5));
     &[data-menu='open'] {
-      width: fit-content;
+      display: flex;
+      flex-direction: column;
     }
     &[data-menu='closed'] {
-      pointer-events: none;
-      transform: translateX(-50%);
-      opacity: 0;
+      display: none;
     }
   }
 }
 
-//   &__tmdbCredit {
-//     flex: 1 0 15%;
-//     display: flex;
-//     align-items: end;
-//     max-width: 32ch;
-//     &--p {
-//       font-family: 'Satoshi-Regular';
-//       font-size: f.rem(16);
-//       letter-spacing: 0.03em;
-//       line-height: normal;
-//       color: white;
-//       & a {
-//         color: cyan;
-//       }
-//     }
-//   }
+.fdMenu__menu__search {
+  background-color: hsl(0, 0%, 0%);
+}
+
+.fdMenu__menu__genres {
+  &__nav {
+    width: fit-content;
+    &--heading {
+      @include m.fdFontL;
+    }
+    &__ul {
+      overflow-y: scroll;
+      scrollbar-width: none;
+      &__li {
+        &--button {
+          @include m.fdFontL;
+          white-space: nowrap;
+        }
+      }
+    }
+  }
+}
